# scope-rs

./: .gitignore  Cargo.toml  PLAN.md
.github/workflows/: ci.yml  release.yml
docs/: 14-serialization.md  15-midi.md  16-distribution.md
src/: main.rs  midi.rs  settings.rs
src/audio/: buffer.rs  file.rs  input.rs  mod.rs
src/render/: mod.rs  oscilloscope.rs
