[package]
name = "scope-rs"
version = "0.1.0"
edition = "2021"
description = "Oscilloscope audio visualizer - display audio as XY graphics"
license = "MIT"

[dependencies]
# GUI framework (egui + windowing)
eframe = "0.29"

# Cross-platform audio I/O
cpal = "0.15"

# Audio file decoding (WAV, MP3, FLAC, OGG, etc.)
symphonia = { version = "0.5", features = ["all"] }

# File dialogs
rfd = "0.15"

# Error handling
thiserror = "2.0"

# Lock-free ring buffer for audio
ringbuf = "0.4"

# Serialization / settings persistence
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Platform config directory
dirs = "6.0"

# Logging
log = "0.4"
env_logger = "0.11"
